Remove org.elasticsearch.common.util.set.Sets